--- a/ardrone_fsw/.cproject
+++ b/ardrone_fsw/.cproject
@@ -33,6 +33,7 @@
 							<tool id="cdt.managedbuild.tool.gnu.cross.c.linker.1333047881" name="Cross GCC Linker" superClass="cdt.managedbuild.tool.gnu.cross.c.linker">
 								<option id="gnu.c.link.option.libs.325562246" name="Libraries (-l)" superClass="gnu.c.link.option.libs" useByScannerDiscovery="false" valueType="libs">
 									<listOptionValue builtIn="false" value="pthread"/>
+									<listOptionValue builtIn="false" value="m"/>
 									<listOptionValue builtIn="false" value="rt"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.c.linker.input.1349980190" superClass="cdt.managedbuild.tool.gnu.c.linker.input">
